quen commit nen h commit 1 dong

--- a/src/client/pages/homePage.html
+++ b/src/client/pages/homePage.html
@@ -20,7 +20,7 @@
                 </a>
             </div>
             <div class="category-btn">
-                <a href="">
+                <a href="./categoriesPage.html">
                     <span>Categories</span>
                     <i class='bx bx-chevron-down'></i>
                 </a>
@@ -198,7 +198,7 @@
                             <img src="/src/client/assert/img/18-120x183.jpg" alt="">
                         </div>
                         <div class="info">
-                            <a href="">Dark in Death: An Eve Dallas Novel (In Death, Book 46)</a>
+                            <a href="/src/client/pages/productPage.html">Dark in Death: An Eve Dallas Novel (In Death, Book 46)</a>
                             <a href="" style="font-size:15px">J. D. Robb</a>
                             <span>
                                 $
@@ -603,7 +603,7 @@
 
     <footer>
         <div>
-            <h1>CHAPTERVERSE</h6>
+            <h1>CHAPTERVERSE</h1>
             <p>1418 River Drive, Suite 35 Cottonhall, CA 9622, United States</p>
             <a href="mailto:chapterverse@official.com">chapterverse@official.com</a>
             <ul class="icon-lists">
