update cate page

--- a/src/client/pages/categoriesPage.html
+++ b/src/client/pages/categoriesPage.html
@@ -60,7 +60,7 @@
 
     <div class="main w-fit mx-20 ">
         <div class="flex flex-row justify-between">
-            <div class="products w-8/12">
+            <div class="products w-8/12 flex flex-col">
                 <div class="flex flex-row items-center justify-between mb-6">
                     <div>
                         <span class="text-lg font-medium">Results</span>
@@ -196,6 +196,132 @@
                         </li>
                         <li>
                             <div class="card">
+                                <div class="card-content">
+                                    <div class="image">
+                                        <img src="/src/client/assert/img/18-120x183.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <a href="" class="font-semibold">Dark in Death: An Eve Dallas Novel (In Death, Book 46)</a>
+                                        <a href="" style="font-size:15px">J. D. Robb</a>
+                                        <span>
+                                            $
+                                            <span>14.20</span>
+                                        </span>
+                                    </div>
+                                    <div class="hover-block">
+                                        <a href="">ADD TO CART</a>
+                                        <i class='bx bx-heart'></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="card">
+                                <div class="card-content">
+                                    <div class="image">
+                                        <img src="/src/client/assert/img/18-120x183.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <a href="" class="font-semibold">Dark in Death: An Eve Dallas Novel (In Death, Book 46)</a>
+                                        <a href="" style="font-size:15px">J. D. Robb</a>
+                                        <span>
+                                            $
+                                            <span>14.20</span>
+                                        </span>
+                                    </div>
+                                    <div class="hover-block">
+                                        <a href="">ADD TO CART</a>
+                                        <i class='bx bx-heart'></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="card">
+                                <div class="card-content">
+                                    <div class="image">
+                                        <img src="/src/client/assert/img/18-120x183.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <a href="" class="font-semibold">Dark in Death: An Eve Dallas Novel (In Death, Book 46)</a>
+                                        <a href="" style="font-size:15px">J. D. Robb</a>
+                                        <span>
+                                            $
+                                            <span>14.20</span>
+                                        </span>
+                                    </div>
+                                    <div class="hover-block">
+                                        <a href="">ADD TO CART</a>
+                                        <i class='bx bx-heart'></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="card opacity-0">
+                                <div class="card-content">
+                                    <div class="image">
+                                        <img src="/src/client/assert/img/18-120x183.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <a href="" class="font-semibold">Dark in Death: An Eve Dallas Novel (In Death, Book 46)</a>
+                                        <a href="" style="font-size:15px">J. D. Robb</a>
+                                        <span>
+                                            $
+                                            <span>14.20</span>
+                                        </span>
+                                    </div>
+                                    <div class="hover-block">
+                                        <a href="">ADD TO CART</a>
+                                        <i class='bx bx-heart'></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="card opacity-0">
+                                <div class="card-content">
+                                    <div class="image">
+                                        <img src="/src/client/assert/img/18-120x183.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <a href="" class="font-semibold">Dark in Death: An Eve Dallas Novel (In Death, Book 46)</a>
+                                        <a href="" style="font-size:15px">J. D. Robb</a>
+                                        <span>
+                                            $
+                                            <span>14.20</span>
+                                        </span>
+                                    </div>
+                                    <div class="hover-block">
+                                        <a href="">ADD TO CART</a>
+                                        <i class='bx bx-heart'></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="card opacity-0">
+                                <div class="card-content">
+                                    <div class="image">
+                                        <img src="/src/client/assert/img/18-120x183.jpg" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <a href="" class="font-semibold">Dark in Death: An Eve Dallas Novel (In Death, Book 46)</a>
+                                        <a href="" style="font-size:15px">J. D. Robb</a>
+                                        <span>
+                                            $
+                                            <span>14.20</span>
+                                        </span>
+                                    </div>
+                                    <div class="hover-block">
+                                        <a href="">ADD TO CART</a>
+                                        <i class='bx bx-heart'></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="card opacity-0">
                                 <div class="card-content">
                                     <div class="image">
                                         <img src="/src/client/assert/img/18-120x183.jpg" alt="">
