--- a/src/client/pages/categoriesPage.html
+++ b/src/client/pages/categoriesPage.html
@@ -77,9 +77,6 @@
                             <div>
                                 <ul class="menu-dropdown">
                                     <li class="active">Default sorting</li>
-                                    <li>Sort by popularity</li>
-                                    <li>Sort by rating</li>
-                                    <li>Sort by lastet</li>
                                     <li>Sort by price: low to high</li>
                                     <li>Sort by price: high to low</li>
                                 </ul>
@@ -88,7 +85,7 @@
                     </div>
                 </div>
                 <div class="list w-full">
-                    <ul class="w-full flex flex-row flex-wrap">
+                    <ul class="items w-full flex flex-row flex-wrap">
                         <li>
                             <div class="card">
                                 <div class="card-content">
@@ -100,7 +97,7 @@
                                         <a href="" style="font-size:15px">J. D. Robb</a>
                                         <span>
                                             $
-                                            <span>14.20</span>
+                                            <span class="priceValue">14.20</span>
                                         </span>
                                     </div>
                                     <div class="hover-block">
@@ -121,7 +118,7 @@
                                         <a href="" style="font-size:15px">J. D. Robb</a>
                                         <span>
                                             $
-                                            <span>14.20</span>
+                                            <span class="priceValue">14.20</span>
                                         </span>
                                     </div>
                                     <div class="hover-block">
@@ -142,7 +139,7 @@
                                         <a href="" style="font-size:15px">J. D. Robb</a>
                                         <span>
                                             $
-                                            <span>14.20</span>
+                                            <span class="priceValue">13.20</span>
                                         </span>
                                     </div>
                                     <div class="hover-block">
@@ -163,7 +160,7 @@
                                         <a href="" style="font-size:15px">J. D. Robb</a>
                                         <span>
                                             $
-                                            <span>14.20</span>
+                                            <span class="priceValue">14.20</span>
                                         </span>
                                     </div>
                                     <div class="hover-block">
@@ -184,7 +181,7 @@
                                         <a href="" style="font-size:15px">J. D. Robb</a>
                                         <span>
                                             $
-                                            <span>14.20</span>
+                                            <span class="priceValue">14.20</span>
                                         </span>
                                     </div>
                                     <div class="hover-block">
@@ -205,7 +202,7 @@
                                         <a href="" style="font-size:15px">J. D. Robb</a>
                                         <span>
                                             $
-                                            <span>14.20</span>
+                                            <span class="priceValue">14.20</span>
                                         </span>
                                     </div>
                                     <div class="hover-block">
@@ -226,7 +223,7 @@
                                         <a href="" style="font-size:15px">J. D. Robb</a>
                                         <span>
                                             $
-                                            <span>14.20</span>
+                                            <span class="priceValue">14.20</span>
                                         </span>
                                     </div>
                                     <div class="hover-block">
@@ -247,7 +244,7 @@
                                         <a href="" style="font-size:15px">J. D. Robb</a>
                                         <span>
                                             $
-                                            <span>14.20</span>
+                                            <span class="priceValue">14.20</span>
                                         </span>
                                     </div>
                                     <div class="hover-block">
@@ -268,7 +265,7 @@
                                         <a href="" style="font-size:15px">J. D. Robb</a>
                                         <span>
                                             $
-                                            <span>14.20</span>
+                                            <span class="priceValue">14.20</span>
                                         </span>
                                     </div>
                                     <div class="hover-block">
@@ -289,7 +286,7 @@
                                         <a href="" style="font-size:15px">J. D. Robb</a>
                                         <span>
                                             $
-                                            <span>14.20</span>
+                                            <span class="priceValue">14.20</span>
                                         </span>
                                     </div>
                                     <div class="hover-block">
@@ -310,7 +307,7 @@
                                         <a href="" style="font-size:15px">J. D. Robb</a>
                                         <span>
                                             $
-                                            <span>14.20</span>
+                                            <span class="priceValue">14.20</span>
                                         </span>
                                     </div>
                                     <div class="hover-block">
@@ -331,7 +328,7 @@
                                         <a href="" style="font-size:15px">J. D. Robb</a>
                                         <span>
                                             $
-                                            <span>14.20</span>
+                                            <span class="priceValue">14.20</span>
                                         </span>
                                     </div>
                                     <div class="hover-block">
